--- a/index.html
+++ b/index.html
@@ -1,43 +1,40 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="assets/style.css" />
-    <!-- CSS only -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
-      crossorigin="anonymous"
-    />
-    <title>Calculadora</title>
-  </head>
 
-  <body
-    class="bg-primary d-flex justify-content-center align-items-center vh-100 vw-100"
-  >
-    <div class="calculator bg-dark border rounded-4 border-0">
-      <p id="place-number"></p>
-      <button type="button" class="gray" id="ac" value="ac">AC</button>
-      <button type="button" class="gray" id="%" value="%">%</button>
-      <button type="button" class="blue" id="/" value="/">/</button>
-      <button type="button" class="blue" id="*" value="*">*</button>
-      <button type="button" class="black" id="7" value="7">7</button>
-      <button type="button" class="black" id="8" value="8">8</button>
-      <button type="button" class="black" id="9" value="9">9</button>
-      <button type="button" class="blue" id="-" value="-">-</button>
-      <button type="button" class="black" id="4" value="4">4</button>
-      <button type="button" class="black" id="5" value="5">5</button>
-      <button type="button" class="black" id="6" value="6">6</button>
-      <button type="button" class="blue" id="+" value="+">+</button>
-      <button type="button" class="black" id="1" value="1">1</button>
-      <button type="button" class="black" id="2" value="2">2</button>
-      <button type="button" class="black" id="3" value="3">3</button>
-      <button type="button" class="blue-equal" id="=">=</button>
-      <button type="button" class="black zero" id="0" value="0">0</button>
-      <button type="button" class="black" id="." value=".">.</button>
-    </div>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="stylesheet" href="assets/style.css" />
+  <!-- CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
+  <title>Calculadora</title>
+</head>
 
-    <script src="assets/app.js"></script>
-  </body>
+<body class="d-flex justify-content-center align-items-center vh-100 vw-100">
+  <div class="calculator bg-dark border rounded-4 border-0">
+    <input id="place-number">
+    <!-- <p ></p> -->
+    <button class="gray" value="ac">AC</button>
+    <button class="gray" value="%">%</button>
+    <button class="blue" value="/">/</button>
+    <button class="blue" value="*">*</button>
+    <button class="black" value="7">7</button>
+    <button class="black" value="8">8</button>
+    <button class="black" value="9">9</button>
+    <button class="blue" value="-">-</button>
+    <button class="black" value="4">4</button>
+    <button class="black" value="5">5</button>
+    <button class="black" value="6">6</button>
+    <button class="blue" value="+">+</button>
+    <button class="black" value="1">1</button>
+    <button class="black" value="2">2</button>
+    <button class="black" value="3">3</button>
+    <button class="blue-equal">=</button>
+    <button class="black zero" value="0">0</button>
+    <button class="black" value=".">.</button>
+  </div>
+
+  <script src="assets/app.js"></script>
+</body>
+
 </html>
